# cpu_instr_freq

./: CMakeLists.txt  README.md  monitor_cpu_freq.py  run_benchmarks.sh
include/: avx_benchmark.h  cpu_utils.h
src/: avx_benchmark.cpp  cpu_utils.cpp  main.cpp
